<resources>
    <string name="app_name" translatable="false">Go4Lunch</string>

    <!-- warning texts in login activity -->
    <string name="authentication_required">Please authenticate in order to use this app</string>
    <string name="connexion_required">This app requires an internet connexion</string>

    <!-- warning texts in main activity -->
    <string name="permissions_required">This app required the Location permission in order to work. Please check the app\'s or device\'s settings to grant the permission.</string>
    <string name="no_location">We can\'t find your location</string>
    <string name="no_restaurant_found">No restaurant found close to your location.</string>
    <string name="no_search_result">No restaurant found</string>
    <string name="no_workmates_found">No workmates found</string>

    <!-- Facebook string implementation -->
    <string name="facebook_app_id" translatable="false">238738423831258</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb238738423831258</string>

    <!-- Bottom Navigation View titles -->
    <string name="bottom_navigation_view_map">Map View</string>
    <string name="bottom_navigation_view_list">List View</string>
    <string name="bottom_navigation_view_workmates">Workmates</string>

    <!-- activity_login.xml strings -->
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>

    <!-- item_recycler_workmates.xml strings -->
    <string name="workmates_has_chosen">%1$s is eating at %2$s</string>
    <string name="workmates_hasnt_chose">%1$s hasn\'t decided yet</string>
    <string name="workmate_is_joining">%1$s is joining</string>

    <!-- item_recycler_restaurant.xml placeholders strings -->
    <string name="restaurant_name_placeholder"><font fgcolor="#FF0000">name unknown</font></string>
    <string name="restaurant_hours_placeholder"><font fgcolor="#FF0000">unknown hours</font></string>
    <string name="restaurant_address_placeholder"><font fgcolor="#FF0000">unknown address</font></string>
    <string name="restaurant_distance_placeholder" translatable="false"><font fgcolor='#FF0000'>distance</font></string>
    <string name="restaurant_workmates_placeholder" translatable="false"><font fgcolor='#FF0000'>(?)</font></string>
    <string name="restaurant_workmates_imageview_contentdescription_placeholder"><font fgcolor='#FF0000'>workmates\' icon</font></string>
    <string name="restaurant_firststar_imageview_contentdescription_placeholder"><font fgcolor='#FF0000'>first star rating</font></string>
    <string name="restaurant_thirdstar_imageview_contentdescription_placeholder"><font fgcolor='#FF0000'>third star rating</font></string>
    <string name="restaurant_restaurantpictures_imageview_contentdescription_placeholder"><font fgcolor='#FF0000'>restaurant picture</font></string>

    <!--activity_restaurant_details.xml strings -->
    <string name="restaurant_call_button">CALL</string>
    <string name="restaurant_like_button">LIKE</string>
    <string name="restaurant_WEBSITE_button">WEBSITE</string>

    <!-- restaurants open/close strings -->
    <string name="restaurant_hours_isopen"><font fgcolor="#00FF00">opening soon</font></string>
    <string name="restaurant_hours_notopen"><font fgcolor="#FF0000">closing soon</font></string>

    <!-- item_recycler_restaurant.xml strings -->
    <string name="workmate_isconnected" translatable="false">Workmate is connected</string>
    <string name="workmate_joining" translatable="false">Workmate is joining!</string>
    <string name="workmate_picture_imageview_contentdescription" translatable="false">workmate\'s picture</string>
    <string name="restaurant_secondstar_imageview_contentdescription_placeholder"><font fgcolor="#FF0000">second star rating</font></string>
    <string name="app_tagline">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="long_distance" translatable="false">>3km</string>

    <!-- Drawer menu strings -->
    <string name="your_lunch" translatable="true">YOUR LUNCH</string>
    <string name="settings" translatable="true">SETTINGS</string>
    <string name="logout" translatable="true">LOGOUT</string>

    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>

    <!-- Settings strings -->
    <string name="setting_notifications" translatable="true">Notifications</string>
    <string name="enabling_notifications" translatable="true">Enabling ?</string>
    <string name="setting_sortby" translatable="true">Sort by</string>

    <string name="monday" translatable="true">Monday</string>
    <string name="thursday" translatable="true">Thursday</string>
    <string name="wednesday" translatable="true">Wednesday</string>
    <string name="tuesday" translatable="true">Tuesday</string>
    <string name="friday" translatable="true">Friday</string>
    <string name="saturday" translatable="true">Saturday</string>
    <string name="Sunday" translatable="true">Sunday</string>

    <string name="sort_default" translatable="true">Default</string>
    <string name="sort_names" translatable="true">Names</string>
    <string name="sort_Workmates" translatable="true">Workmates</string>
    <string name="sort_rating" translatable="true">Rating</string>
    <string name="sort_proximity" translatable="true">Proximity</string>

    <!-- notification string -->
    <string name="notif_content_text" translatable="true">It\'s lunch time!</string>
    <string name="notif_have_a_good_lunch" translatable="true">Have a good lunch!</string>
    <string name="notif_join_by" translatable="true">You will be join by: </string>
    <string name="notif_no_restaurant_pick" translatable="true">You didn\'t pick a restaurant.</string>
    <string name="notif_no_address" translatable="true">Address unknown</string>
    <string name="notif_and" translatable="true"> and </string>

    <!-- toolbar menu item -->
    <string name="search_item" translatable="false">menu</string>
</resources>
